syntax = "proto3";

package game;

service GameService {
    rpc Play(stream GameMessage) returns (stream GameMessage);
}

// TODO: no oneof
message GameMessage {
    oneof message {
        ControlInput control_input = 1;
        GameState game_state = 2;
    }
}

message ControlInput {
    int32 player_id = 1;
    Direction direction = 2;
}

message GameState {
    float x = 1;
    float y = 2;
}

enum Direction {
    NONE = 0;
    UP = 1;
    RIGHT = 2;
    DOWN = 3;
    LEFT = 4;
}
